[package]
name = "archiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.0.25", features = ["derive"] }
dns-lookup = "1.0.8"
ipconfig = "0.3.1"
tar = "0.4.38"
ureq = { version = "2.5.0", features = ["json"] }
walkdir = "2.3.2"

[features]
demo = []